feat: add register test
