# model/api/social.go
@@ -1,1 +1,12 @@
 package api
+
+type RegisterQ struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	Captcha  string `json:"captcha"`
+}
+
+type RegisterA struct {
+	Message string `json:"message"`
+}
